--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "canvas-confetti": "^1.9.3",
+    "firebase": "^11.9.0",
     "parcel": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
