--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "parcel": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3"
   }
 }
