--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
-  "version": 2,
   "builds": [
-    {
-      "src": "public/index.html",
-      "use": "@vercel/static-build"
-    }
+    { "src": "public/index.html", "use": "@vercel/static-build" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "src": "/(.*)", "dest": "public/index.html" }
   ]
 }
