--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,6 @@
     { "src": "public/index.html", "use": "@vercel/static-build" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "public/index.html" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
