--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
     "autoprefixer": "^10.4.21",
+    "buffer": "^6.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1"
   }
