--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^7.3.1",
+    "@vercel/speed-insights": "^1.2.0",
     "canvas-confetti": "^1.9.3",
     "firebase": "^11.9.0",
     "parcel": "^2.10.0",
